--- a/index.html
+++ b/index.html
@@ -937,6 +937,9 @@
             <ul class='copyright'>
                 <center><a class='copyright_li' onclick="impressum_fn()">Impressum</a></center>
             </ul>
+            <ul class='copyright'>
+                <center><a class='copyright_li' onclick="datenschutz_fn()">Datenschutz</a></center>
+            </ul>
         </footer>
 
 
@@ -1037,7 +1040,11 @@
                 window.open("impressum.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=500,left=500,width=500,height=400");
             }
         </script>
-
+        <script>
+            function datenschutz_fn() {
+                window.open("datenschutz.html", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,top=500,left=500,width=500,height=400");
+            }
+        </script>
         <!--
             <script>$(document).ready(function(){
                         $("#WWWorkbutton").click(function(){
