--- a/index.html
+++ b/index.html
@@ -527,6 +527,21 @@
 
             <ul class='paper'>
                 <a class='paper_li' target="_blank" rel="noopener noreferrer"
+                    href="https://arxiv.org/abs/2305.08674">Application of Graph Networks to background rejection in Imaging Air Cherenkov Telescopes</a>
+            </ul>
+            <li class='author'>Jonas Glombitza, Vikas Joshi, Benedetta Bruno, Stefan Funk</li>
+            <p class='text'>
+                Imaging Air Cherenkov Telescopes (IACTs) are essential to ground-based observations of gamma rays in the GeV to TeV regime.
+                One particular challenge of ground-based gamma-ray astronomy is an effective rejection of the hadronic background.
+                We propose a new deep-learning-based algorithm for classifying images measured using single or multiple Imaging Air Cherenkov Telescopes by utilizing
+                graph convolutional networks.
+                For images cleaned of the light from the night sky, this allows for an efficient algorithm design that bypasses the challenge of sparse images in CNN-based
+                approachs and find a promising performance with improvements to previous machine-learning and deep-learning-based methods.
+            </p>
+            <div style="margin-bottom: 2.5em"></div>
+
+            <ul class='paper'>
+                <a class='paper_li' target="_blank" rel="noopener noreferrer"
                     href="https://worldscientific.com/worldscibooks/10.1142/12294">Book: Deep Learning for Physics
                     Research</a>
             </ul>
