--- a/impressum.html
+++ b/impressum.html
@@ -3,7 +3,7 @@ Information in accordance with Section 5 TMG
 <br><br>Dr. rer. nat. Jonas Glombitza
 <br><br>Otto-Blumenthal-Str.16<br>52075 Aachen<br>
 <h2>Contact Information</h2>
-Telephone: +49 241 80 27326 <br>E-Mail: <a href="jonas.glombitza@cern.ch">jonas.glombitza@fau.ch</a><br>Internet address: <a href="www.jonas-glombitza.com" target="_blank">www.jonas-glombitza.com</a><br><br>
+Telephone: +49 241 80 27326 <br>E-Mail: <a href="jonas.glombitza@fau.de">jonas.glombitza@fau.de</a><br>Internet address: <a href="www.jonas-glombitza.com" target="_blank">www.jonas-glombitza.com</a><br><br>
 <h2>Disclaimer</h2>
 Accountability for content<br>
 The contents of our pages have been created with the utmost care. However, we cannot guarantee the contents'
