add mobile phone compatability

--- a/index.html
+++ b/index.html
@@ -997,13 +997,24 @@
 
                     <img src="images/ohne_krawatte_bw.jpg" width="30%" height="30%" alt="" />
                 </span>
+
+
+                                <a class='paper_li' target="_blank" rel="noopener noreferrer" href="material/cv_glombitza.pdf"style="margin-left: 1.2em; margin-right: 1.2em">
+                    <p class="fonts">Download CV</font>
+                </a>
+                    <img src="images/ohne_krawatte_bw.JPG" width="40%" height="40%" alt="" />
+
+                    <p class="fonts">Dr. Jonas Glombitza</font>
+
+                </span>
                 -->
-                    <span align=right class="avatar"><font size=4.5>Jonas Glombitza</font><img src="images/ohne_krawatte_bw.JPG" width="40%"
-                            height="40%" alt="" /><a class='paper_li' target="_blank" rel="noopener noreferrer" href="material/cv_glombitza.pdf"
-                            style="margin-left: 1.2em; margin-right: 1.2em">
-                            <font size=4.5>Download CV</font>
-                            </a>
-                    </span>
+                <a class='paper_li' target="_blank" rel="noopener noreferrer" href="material/cv_glombitza.pdf"style="margin-left: 1.2em; margin-right: 1.2em">
+                    <font class="fonts">Download CV</font>
+                </a>                
+                    <img src="images/ohne_krawatte_bw.JPG" width="40%" height="40%" alt="" />
+
+                    <h3 class="fonts">Dr. Jonas Glombitza</h3>
+                </span>
             </header>
 
             <p class=text>
