fix spelling mistakes

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 By exploiting these data the characteristics of the penetrating messenger particles are reconstructed to open a window to the universe at extreme energies and its most radical phenomena.
             </p>
             <blockquote align='left' size>
-                <p class="text">"The capabilities and precision of machine learning offer outstanding opportunities to greatly improve the complex and time-consuming reconstruction processes to better reveal the fascinating processes in our universe."</p>
+                <p class="text">"The capabilities and precision of machine learning offer outstanding opportunities to greatly improve the complex and time-consuming reconstruction algorithms to better reveal the fascinating processes in our universe."</p>
             </blockquote>
             <div style="margin-bottom: 0.5em"></div>
 
@@ -201,7 +201,7 @@
                 computer vision were reduced massively. Since then, deep learning has become the leading approach in
                 most machine learning applications. The success was driven by growing computing performance (GPUs),
                 newly developed algorithms, and big data, which enabled to train deep networks with unprecendent precision for the first time.
-                The capabilities of AI offer exceptional potential for improving algorithm currently used in astroparticle physics.
+                The capabilities of AI offer exceptional potential for improving algorithms currently used in astroparticle physics.
             </p>
 
             <div style="margin-bottom: 1em"></div>
@@ -216,7 +216,7 @@
                 size of Berlin) large Surface Detector to measure the secondary particles of air showers on the ground.
 
                 The largest UHECR experiment is the <i><a class='paper_li' target="_blank" rel="noopener noreferrer"
-                    href="https://www.auger.org/">Pierre Auger Observatory</a></i> placed in Argentina.</p>
+                    href="https://www.auger.org/">Pierre Auger Observatory</a></i>, placed in Argentina.</p>
 
                     <div style="margin-bottom: 0.1em"></div>
                     <iframe src="https://player.vimeo.com/video/88029390" frameborder="0" allow="autoplay; fullscreen"  allowfullscreen onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:480px;width:100%;border:none;overflow:hidden;"></iframe>
@@ -242,8 +242,8 @@
             
             <h2>Excited?  Apply deep learning in astroparticle physics yourself</h3>
             <p class='text'>
-                Explore the potential of deep learning to improved the quality of astroparticle experiments by reconstructing cosmic-ray properties using deep neural networks.
-                Open the notebooks at google colab to train the networks with GPU support or see the code at <a class='a_li' target="_blank" rel="noopener noreferrer"
+                Explore the potential of deep learning to improve the quality of astroparticle experiments by reconstructing cosmic-ray properties using deep neural networks.
+                Open the notebooks at google colab to train the networks with GPU support or see the code on <a class='a_li' target="_blank" rel="noopener noreferrer"
                 href="https://github.com/jglombitza/tutorial_nn_airshowers">GitHub</a>.
             </p>
                 <li class='list'>
@@ -279,7 +279,7 @@
                         </nav>
                     </header>
                 <p class="text">
-                    Or visit the largest collection of deep learning application in physics at 
+                    Or visit the large collection of deep learning applications in physics at 
                     <a target="_blank" rel="noopener noreferrer"
                         href="https://deeplearningforphysicsresearchbook.github.io/deep-learning-physics/">
                         https://deeplearningphysics.org/
@@ -1018,7 +1018,7 @@
             </header>
 
             <p class=text>
-                I am postdoc at the <i>Erlangen Centre for Astroparticle Physics</i>, Germany, after finishing my Ph.D.
+                I am a postdoc at the <i>Erlangen Centre for Astroparticle Physics</i>, Germany, after finishing my Ph.D.
                 in physics with <i>summa cum laude</i> in December 2021 at RWTH Aachen University. Currently, I'm investigating machine learning
                 algorithms in the context of particle and astroparticle physics. I am interested in generative models,
                 graph networks, computer vision, and the application of deep-learning techniques in physics analyses.
@@ -1048,10 +1048,10 @@
                 I am further researching generative models and I am involved in developing methods to <a class='paper_li'
                     target="_blank" rel="noopener noreferrer"
                     href="https://link.springer.com/article/10.1007%2Fs41781-018-0019-7">accelerate simulations using
-                    Generative Adversarial Network (GANs)</a> and the design of <a class='paper_li'
+                    Generative Adversarial Networks (GANs)</a> and the design of <a class='paper_li'
                     target="_blank" rel="noopener noreferrer"
                     href="https://doi.org/10.1007/s41781-018-0008-x">adversarial frameworks in the context of domain
-                    adaption to increase the robustness of machine learning algorhtms.</a>.
+                    adaption to increase the robustness of machine learning algorithms</a>.
             </p>
 
             <p class='text'>
@@ -1059,7 +1059,7 @@
                 technologies. I love to teach and understand things in detail to explain them well. I believe in open,
                 reproducible, and international research.
 
-                In my spare time, I like to go running and to play football with friends. In quiet moments I love to
+                In my spare time, I like to go running and play football with friends. In quiet moments, I love to
                 play the piano. I truly enjoy hiking, traveling, and taking pictures of nature and wild animals all over
                 the world.
             </p>
