update publication history

--- a/index.html
+++ b/index.html
@@ -713,6 +713,21 @@
 
             <ul class='paper'>
                 <a class='paper_li' target="_blank" rel="noopener noreferrer"
+                    href="https://arxiv.org/abs/2311.01385">Ultra-Fast Generation of Air Shower Images for IACTs using Generative Adversarial Networks</a>
+            </ul>
+            <li class='author'>Christian Elflein, Stefan Funk, Jonas Glombitza</li>
+            <p class='text'>
+                For the analysis of data taken by Imaging Air Cherenkov Telescopes (IACTs), a large number of air shower simulations are needed to derive the instrument response.
+                The simulations are very complex, involving computational and memory-intensive calculations, and are usually performed repeatedly for different observation intervals to take into account the varying optical sensitivity of the instrument.
+                The use of generative models based on deep neural networks offers the prospect for memory-efficient storing of huge simulation libraries and cost-effective generation of a large number of simulations in an extremely short time.
+                In this work, we use Wasserstein Generative Adversarial Networks to generate photon showers for an IACT equipped with the FlashCam design, which has more than 1,500 pixels.
+                We demonstrate for the first time that the generated images have high fidelity with respect to low-level observables, the Hillas parameters, their physical properties, as well as their correlations.
+                The found increase in generation speed in the order of 10^5 yields promising prospects for fast and memory-efficient simulations of air showers for IACTs. 
+            </p>
+            <div style="margin-bottom: 2.5em"></div>
+
+            <ul class='paper'>
+                <a class='paper_li' target="_blank" rel="noopener noreferrer"
                     href="https://arxiv.org/abs/2305.08674">Application of Graph Networks to background rejection in Imaging Air Cherenkov Telescopes</a>
             </ul>
             <li class='author'>Jonas Glombitza, Vikas Joshi, Benedetta Bruno, Stefan Funk</li>
