update generative models

--- a/index.html
+++ b/index.html
@@ -514,16 +514,17 @@
 
             <div style="margin-bottom: 1.5em"></div>
 
+            <h3>
+                <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://github.com/jglombitza/tutorial_generative_models">
+                    Generative Models
+                </a>
+            </h3>
 
-            <h4>Generative Models</h4>
             <p class='text'>
                 Generative models are facinating deep learning algorithms designed to generate new data samples that are similar to sampels from a given dataset.
                 By training the models, they learn the underlying patterns and statistics of the data, enabling them to generate novel and realistic instances that resemble the original data distribution.
                 Try out the fast-generation of physics simulation using generative models.
-                Open the tutorials in google colab to train Generative Adversarial Networks (GANs) with GPU support or see the code at 
-                <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://github.com/jglombitza/tutorial_nn_airshowers">
-                    GitHub
-                </a>.
+                Open the tutorials in google colab to train Generative Adversarial Networks (GANs) with GPU support or have a look at the slides.
             </p>
             <li class='list'>
                 <p class="text">Familiarize yourself with GANs and learn about fast sample generation....     
@@ -534,7 +535,7 @@
                 </p>
             </li>
             <li class='list'>
-                <p class="text">Learn about advanced generation methods (Wasserstein GANs)....   
+                <p class="text">Learn about advanced generative models (Wasserstein GANs)....   
                     <a target="_blank" rel="noopener noreferrer"
                         href="https://colab.research.google.com/github/Napoleongurke/tutorial_generative_models/blob/master/WGAN.ipynb"><img
                         src="https://colab.research.google.com/assets/colab-badge.svg" alt="" />
@@ -555,11 +556,7 @@
             </a>
             <p class='text'>
                 Tutorial on GANs and Wasserstein GANs given at the 2nd Terascale School of Machine Learning. Covering the basic theory about the Wasserstein distance and
-                related similarity distances and divergences for high-dimensional spaces. For code see the example
-                section at
-                <a class='a_li' target="_blank" rel="noopener noreferrer"
-                    href="https://vispa.physik.rwth-aachen.de">VISPA
-                </a>.
+                related similarity distances and divergences for high-dimensional spaces.
             </p>
             <li class='list'>
                 <a class='a_li' target="_blank" rel="noopener noreferrer"
@@ -569,23 +566,6 @@
             <li class='list'>
                 <a class='a_li' target="_blank" rel="noopener noreferrer"
                     href="https://github.com/Napoleongurke/tutorial_generative_models">Code
-                </a>
-            </li>
-            
-
-            <p class='text'>
-                Tutorial about Generative Adversarial Networks (GANs) given at CERN during the IML Workshop 2019 about advanced techniques in generative modelling.
-                Tutorial contains slides and code. Find the material below.
-            </p>
-            <li class='list'>
-                <a class='a_li' target="_blank" rel="noopener noreferrer"
-                    href="https://indico.cern.ch/event/766872/contributions/3287965/">
-                    Slides
-                </a>
-            </li>
-            <li class='list'>
-                <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://github.com/3pia/iml2019">
-                    Code
                 </a>
             </li>
 
