--- a/index.html
+++ b/index.html
@@ -329,8 +329,18 @@
             </header>
             <h2>2023</h2>
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
-                    href='https://www.physik.uni-siegen.de/cpps/seminars/?lang=de'>Guest lecture at Utrecht University,
-                    Utrecht, Netherlands </a></li>
+                href='https://indico.desy.de/event/37478/sessions/14420/#20230925'>Lecture at ErUM Data training course,
+                Meinzerhagen, Germany </a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://pos.sissa.it/444/278/'>Talk at International Cosmic Ray Conference, Nagoya, Japan </a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://indico.ecap.work/event/44/'>Multi-messenger high energy astrophysics workshop, Erlangen, Germany </a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://www.uu.nl/en'>Guest lecture at Utrecht University,
+            Utrecht, Netherlands </a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://www.dpg-verhandlungen.de/year/2023/conference/smuk/search?query=glombitza&submit=Search'>DPG
+                spring meeting, Dresden</a></li>
             <h2>2022</h2>
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
                     href='https://www.physik.uni-siegen.de/cpps/seminars/?lang=de'>Seminar talk at the CPPS, Siegen </a>
