--- a/index.html
+++ b/index.html
@@ -327,6 +327,15 @@
                     <h2>Invited Talks, Lectures, and Conference Contributions</h2>
                 </span>
             </header>
+            <h2>2024</h2>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://indico.ict.inaf.it/event/2690/page/1105-invited-speakers-partial-list'>Invited talk at ML4astro, Catania, Italy</a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://indico.nikhef.nl/event/4875/'>Deep Learning for Cosmic-Ray Observatories, EuCAIFCon 2024, Amsterdam, The Netherlands</a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://indico.physics.lbl.gov/event/2749/'>Machine learning for astroparticle physics,
+                ML HEP seminar, Berkeley Lab, United States </a></li>
+
             <h2>2023</h2>
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
                 href='https://indico.desy.de/event/37478/sessions/14420/#20230925'>Lecture at ErUM Data training course,
@@ -500,7 +509,7 @@
                     Introspection of Neural Networks 
                 </a>
             </h3>
-
+            Talks
             <p class='text'>
                 Tutorial about neural network introspection.
                 Introspection of neural networks is the process of looking inside the black box holding billions of parameters to understand their predictions and reasoning.
@@ -1044,10 +1053,10 @@
                 ultra-high energy cosmic rays and their mass composition. Within the collaboration, I am the leader of the <a class='a_li'
                     target="_blank" rel="noopener noreferrer"
                     href="https://www.auger.org/collaboration/whos-who"><i>machine learning task</i></a>.
-                Recently, I joined the H.E.S.S. experiment, the Southern Wide-field Gamma-ray Observatory (SWGO), and
-                the Cherenkov Telescope Array (CTA) to develop novel machine-learning algorithms for improving the
-                sensitivity
-                of the current and future generation of gamma-ray observatories.
+                Recently, I joined the H.E.S.S. experiment, the Cherenkov Telescope Array (CTA), and the Southern Wide-field Gamma-ray Observatory (SWGO),
+                where I am a coordinator of the analysis and simulation working group. 
+                My research focuses on the development of novel machine-learning algorithms for improving the
+                sensitivity of the current and future generation of gamma-ray observatories.
             </p>
             <p class=text>
                 I am further researching generative models and I am involved in developing methods to <a class='paper_li'
