--- a/index.html
+++ b/index.html
@@ -329,7 +329,13 @@
             </header>
             <h2>2024</h2>
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
-                href='https://indico.ict.inaf.it/event/2690/page/1105-invited-speakers-partial-list'>Invited talk at ML4astro, Catania, Italy</a></li>
+                href='https://agenda.infn.it/event/36661/'>Invited review talk at CRIS-MAC, Trapani, Italy</a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://indico.scc.kit.edu/event/3738/timetable/#all.detailed'>Lectures at CTEQ summer school, Bramsche, Germany</a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://indico.scc.kit.edu/event/3738/timetable/'>Lectures at ISAPP school, Bad Liebenzell, Germany</a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://indico.ict.inaf.it/event/2690/page/1105-invited-speakers-partial-list'>Invited review talk at ML4astro, Catania, Italy</a></li>
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
                 href='https://indico.nikhef.nl/event/4875/'>Deep Learning for Cosmic-Ray Observatories, EuCAIFCon 2024, Amsterdam, The Netherlands</a></li>
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
