--- a/redirect.html
+++ b/redirect.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "0; url = https://www.tutorialspoint.com" />
+      <meta http-equiv = "refresh" content = "0; url = https://jonas-glombitza.com" />
    </head>
    <body>
       <p>Forward</p>
