--- a/index.html
+++ b/index.html
@@ -341,6 +341,8 @@
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
                 href='https://indico.physics.lbl.gov/event/2749/'>Machine learning for astroparticle physics,
                 ML HEP seminar, Berkeley Lab, United States </a></li>
+            <div style="margin-bottom: 2.5em"></div>
+
 
             <h2>2023</h2>
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
@@ -356,6 +358,8 @@
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
                 href='https://www.dpg-verhandlungen.de/year/2023/conference/smuk/search?query=glombitza&submit=Search'>DPG
                 spring meeting, Dresden</a></li>
+            <div style="margin-bottom: 2.5em"></div>
+
             <h2>2022</h2>
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
                     href='https://www.physik.uni-siegen.de/cpps/seminars/?lang=de'>Seminar talk at the CPPS, Siegen </a>
