--- a/index.html
+++ b/index.html
@@ -722,6 +722,19 @@
 
             <ul class='paper'>
                 <a class='paper_li' target="_blank" rel="noopener noreferrer"
+                    href="https://arxiv.org/abs/2411.16565">Application of Graph Networks to a wide-field Water-Cherenkov-based Gamma-Ray Observatory</a>
+            </ul>
+            <li class='author'>Pierre Auger Collaboration</li>
+            <p class='text'>
+                Water-Cherenkov-based observatories form the high-duty-cycle and wide field of view backbone for observations of the gamma-ray sky at very high energies.
+                In this work, we propose a deep learning application based on graph neural networks (GNNs) for background rejection and energy reconstruction and compare it to state-of-the-art approaches.
+                We find that GNNs outperform hand-designed classification algorithms and observables in background rejection and find an improved energy resolution compared to template-based method.
+             </p>
+            <div style="margin-bottom: 2.5em"></div>
+
+
+            <ul class='paper'>
+                <a class='paper_li' target="_blank" rel="noopener noreferrer"
                     href="https://arxiv.org/abs/2406.06315">Inference of the Mass Composition of Cosmic Rays with energies from 10^18.5 to 10^20 eV using the Pierre Auger Observatory and Deep Learning</a>
             </ul>
             <li class='author'>Pierre Auger Collaboration</li>
@@ -1080,7 +1093,8 @@
                 algorithms in international tutorials and workshops. I am a co-author of the textbook <a class='a_li'
                     target="_blank" rel="noopener noreferrer"
                     href="https://www.worldscientific.com/worldscibooks/10.1142/12294">Deep Learning for Physics
-                    Research</a> and the leader of the <a class='a_li' target="_blank" rel="noopener noreferrer"
+                    Research</a>, coordinator of the <a class='a_li' target="_blank" rel="noopener noreferrer"
+                    href="https://www.swgo.org/SWGOWiki/doku.php?id=collaboration">analysis working group</a> within SWGO, and the leader of the <a class='a_li' target="_blank" rel="noopener noreferrer"
                     href="https://www.auger.org/collaboration/whos-who">machine learning group</a> in the <a
                     class='paper_li' target="_blank" rel="noopener noreferrer" href="https://www.auger.org/"><i>Pierre
                         Auger Collaboration</i></a>.
@@ -1099,8 +1113,7 @@
             <p class=text>
                 I am further researching generative models and I am involved in developing methods to <a class='paper_li'
                     target="_blank" rel="noopener noreferrer"
-                    href="https://link.springer.com/article/10.1007%2Fs41781-018-0019-7">accelerate simulations using
-                    Generative Adversarial Networks (GANs)</a> and the design of <a class='paper_li'
+                    href="https://link.springer.com/article/10.1007%2Fs41781-018-0019-7">accelerate simulations</a> and the design of <a class='paper_li'
                     target="_blank" rel="noopener noreferrer"
                     href="https://doi.org/10.1007/s41781-018-0008-x">adversarial frameworks in the context of domain
                     adaption to increase the robustness of machine learning algorithms</a>.
