--- a/index.html
+++ b/index.html
@@ -327,6 +327,14 @@
                     <h2>Invited Talks, Lectures, and Conference Contributions</h2>
                 </span>
             </header>
+
+            <h2>2025</h2>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://www.dpg-verhandlungen.de/2025/index.html'>Physics in the century of big data: Machine learning in particle and astroparticle physics (invited highlight talk), DPG Spring meeting, Göttingen, Germany</a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://events.icecube.wisc.edu/event/243/contributions/10694/'>Deep Learning for astroparticle physics (review), Machine learning workshop, Newark, USA</a></li>
+            <div style="margin-bottom: 2.5em"></div>
+
             <h2>2024</h2>
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
                 href='https://agenda.infn.it/event/36661/'>Invited review talk at CRIS-MAC, Trapani, Italy</a></li>
@@ -724,7 +732,7 @@
                 <a class='paper_li' target="_blank" rel="noopener noreferrer"
                     href="https://arxiv.org/abs/2411.16565">Application of Graph Networks to a wide-field Water-Cherenkov-based Gamma-Ray Observatory</a>
             </ul>
-            <li class='author'>Pierre Auger Collaboration</li>
+            <li class='author'>Jonas Glombitza et al.</li>
             <p class='text'>
                 Water-Cherenkov-based observatories form the high-duty-cycle and wide field of view backbone for observations of the gamma-ray sky at very high energies.
                 In this work, we propose a deep learning application based on graph neural networks (GNNs) for background rejection and energy reconstruction and compare it to state-of-the-art approaches.
@@ -735,7 +743,7 @@
 
             <ul class='paper'>
                 <a class='paper_li' target="_blank" rel="noopener noreferrer"
-                    href="https://arxiv.org/abs/2406.06315">Inference of the Mass Composition of Cosmic Rays with energies from 10^18.5 to 10^20 eV using the Pierre Auger Observatory and Deep Learning</a>
+                    href="https://doi.org/10.1103/PhysRevLett.134.021001">Inference of the Mass Composition of Cosmic Rays with energies from 10^18.5 to 10^20 eV using the Pierre Auger Observatory and Deep Learning</a>
             </ul>
             <li class='author'>Pierre Auger Collaboration</li>
             <p class='text'>
@@ -749,7 +757,7 @@
 
             <ul class='paper'>
                 <a class='paper_li' target="_blank" rel="noopener noreferrer"
-                    href="https://arxiv.org/abs/2406.06319">Measurement of the Depth of Maximum of Air-Shower Profiles with energies between 10^18.5 and 10^20 eV using the Surface Detector of the Pierre Auger Observatory and Deep Learning</a>
+                    href="https://doi.org/10.1103/PhysRevD.111.022003">Measurement of the Depth of Maximum of Air-Shower Profiles with energies between 10^18.5 and 10^20 eV using the Surface Detector of the Pierre Auger Observatory and Deep Learning</a>
             </ul>
             <li class='author'>Pierre Auger Collaboration</li>
             <p class='text'>
