--- a/index.html
+++ b/index.html
@@ -35,19 +35,12 @@
             <header>
                 <span class="avatar"><img src="images/avatar_jonas_web.jpg" width="45%" height="45%" alt="" /></span>
                 <h1>Jonas Glombitza</h1>
-                <h2>Ph.D. in Physics</h2>
+                <h2>Dr. rer. nat.</h2>
                 <h2>Postdoc at Erlangen Centre for Astroparticle Physics</h2>
-                <h3> interested in</h3>
-                <h2> deep learning | cosmic rays | gamma-ray astronomy </h2>
-
-                <h3> currently working on</h3>
-
-                <h2>deep-learning-based reconstruction algorithms </h2>
-
-                <h3> and </h3>
-
-                <h2>generative models</h2>
-
+                <h3> researching </h3>
+                <h2> cosmic particles at extreme energies </h2>
+                <h3> using </h3>
+                <h2> deep learning </h2>
                 <hr />
             </header>
 
@@ -184,9 +177,10 @@
             <p class="text">Gamma rays are the highest-energy form of electromagnetic radiation.
                 These rays originate from the universe's most extreme and dynamic events and are invisible to the naked eye.
                 They carry detailed information about the universe's most explosive and energetic processes, helping scientists piece together the puzzle of its evolution and composition.
-                The next-generation instrument for astronomic observations of the gamma-ray sky is the
-                <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://www.cta-observatory.org/">Cherenkov Telescope Array (CTA)</a>.
-                Its concept of utilizing more than 50 telescopes at two sites will open a new window to the non-thermal universe.
+                The next-generation instruments for astronomic observations of the gamma-ray sky are the
+                <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://www.swgo.org/">Southern Wide-field Gamma-Ray Observatory (SWGO)</a>.
+                and the <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://www.cta-observatory.org/">Cherenkov Telescope Array (CTA)</a>.
+                These two complementary observatories will open a new window to the non-thermal universe, revolutionizing our understanding of the gamma-ray sky.
             </p>
             <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/5gRHFQP_SjU?si=G-hKabLvG6XAzXwf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             -->
@@ -194,16 +188,15 @@
 
             <h3 align='left' style="margin-bottom: 0.5em">Why AI?</h3>
             <p class=text>
-                Current state-of-the-art algorithms rely on deep learning, i.e., machine-learning techniques based on deep neural networks.
+                Current state-of-the-art algorithms rely on deep learning, i.e., machine-learning techniques based on deep neural networks, often referred to as building blocks of artificial intelligence (AI).
                 These models are capable of analyzing and recognizing patterns in huge amounts of data with unprecedented precision and efficiency.                <!-- Whether for internet search results, machine translation, image classification, or speech recognition on the smartphone, deep learning is already part of our
                 everyday life.-->
                 The breakthrough of deep learning was around 2012 when the error rates in speech recognition and
-                computer vision were reduced massively. Since then, deep learning has become the leading approach in
-                most machine learning applications. The success was driven by growing computing performance (GPUs),
-                newly developed algorithms, and big data, which enabled to train deep networks with unprecendent precision for the first time.
-                The capabilities of AI offer exceptional potential for improving algorithms currently used in astroparticle physics.
+                computer vision were reduced massively. Since then, deep learning has become the leading approach in AI reserach.
+                The capabilities of these algorithms offer exceptional potential for improving techniques currently employed in astroparticle physics.
             </p>
-
+            
+            <!-- 
             <div style="margin-bottom: 1em"></div>
             <h3 align='left' style="margin-bottom: 0.5em">Measuring Ultra-high energy cosmic rays</h3>
             <p class=text>
@@ -221,10 +214,10 @@
                     <div style="margin-bottom: 0.1em"></div>
                     <iframe src="https://player.vimeo.com/video/88029390" frameborder="0" allow="autoplay; fullscreen"  allowfullscreen onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:480px;width:100%;border:none;overflow:hidden;"></iframe>
                     <div style="margin-bottom: 1.em"></div>
+                -->
 
             <div style="margin-bottom: 1.5em"></div>
             <h3 align='left' style="margin-bottom: 0.5em">The fascination of astroparticle physics</h3>
-            
             <p class=text>
                 The fascination with astroparticle physics lies in its ability to unveil the universe's most elusive secrets using messenger particles like gamma and cosmic rays.
                 They provide a unique lens through which we can study phenomena that are otherwise inaccessible and investigate fundamental questions in understanding our world.
@@ -330,7 +323,7 @@
 
             <h2>2025</h2>
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
-                href='https://www.dpg-verhandlungen.de/2025/index.html'>Physics in the century of big data: Machine learning in particle and astroparticle physics (invited highlight talk), DPG Spring meeting, Göttingen, Germany</a></li>
+                href='https://www.dpg-verhandlungen.de/year/2025/conference/goettingen/part/t/session/105/contribution/2'>Physics in the century of big data (invited highlight talk), DPG Spring meeting, Göttingen, Germany</a></li>
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
                 href='https://events.icecube.wisc.edu/event/243/contributions/10694/'>Deep Learning for astroparticle physics (review), Machine learning workshop, Newark, USA</a></li>
             <div style="margin-bottom: 2.5em"></div>
