--- a/index.html
+++ b/index.html
@@ -1094,27 +1094,24 @@
                 algorithms in international tutorials and workshops. I am a co-author of the textbook <a class='a_li'
                     target="_blank" rel="noopener noreferrer"
                     href="https://www.worldscientific.com/worldscibooks/10.1142/12294">Deep Learning for Physics
-                    Research</a>, coordinator of the <a class='a_li' target="_blank" rel="noopener noreferrer"
-                    href="https://www.swgo.org/SWGOWiki/doku.php?id=collaboration">analysis working group</a> within SWGO, and the leader of the <a class='a_li' target="_blank" rel="noopener noreferrer"
-                    href="https://www.auger.org/collaboration/whos-who">machine learning group</a> in the <a
-                    class='paper_li' target="_blank" rel="noopener noreferrer" href="https://www.auger.org/"><i>Pierre
-                        Auger Collaboration</i></a>.
+                    Research</a>, and researching the sensitivity optimization of cosmic-ray instruments using modern algorithms.  
             </p>
             <p class='text'>
                 As a <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://www.auger.org/"><i>Pierre
-                        Auger Collaboration</i></a> member, a large part of my work is dedicated to the physics of
-                ultra-high energy cosmic rays and their mass composition. Within the collaboration, I am the leader of the <a class='a_li'
+                        Auger Collaboration</i></a> member, a large part of has been dedicated to the physics of
+                ultra-high energy cosmic rays and their mass composition. Within the collaboration, I have been the leader of the <a class='a_li'
                     target="_blank" rel="noopener noreferrer"
                     href="https://www.auger.org/collaboration/whos-who"><i>machine learning task</i></a>.
-                Recently, I joined the H.E.S.S. experiment, the Cherenkov Telescope Array (CTA), and the Southern Wide-field Gamma-ray Observatory (SWGO),
-                where I am a coordinator of the analysis and simulation working group. 
-                My research focuses on the development of novel machine-learning algorithms for improving the
-                sensitivity of the current and future generation of gamma-ray observatories.
+                I am a member of the H.E.S.S. experiment, the Cherenkov Telescope Array (CTA), and the Southern Wide-field Gamma-ray Observatory (SWGO),
+                where I am a coordinator of the <a class='a_li' target="_blank" rel="noopener noreferrer"
+                href="https://www.swgo.org/SWGOWiki/doku.php?id=collaboration">analysis working group</a>.
+                My research focuses on the development and implementation of novel machine-learning algorithms for improving the
+                performance of gamma-ray observatories in terms of background rejection and event reconstruction.
             </p>
             <p class=text>
                 I am further researching generative models and I am involved in developing methods to <a class='paper_li'
                     target="_blank" rel="noopener noreferrer"
-                    href="https://link.springer.com/article/10.1007%2Fs41781-018-0019-7">accelerate simulations</a> and the design of <a class='paper_li'
+                    href="https://link.springer.com/article/10.1007%2Fs41781-018-0019-7">accelerate simulations</a>, detect anomalies in huge data sets, and the design of <a class='paper_li'
                     target="_blank" rel="noopener noreferrer"
                     href="https://doi.org/10.1007/s41781-018-0008-x">adversarial frameworks in the context of domain
                     adaption to increase the robustness of machine learning algorithms</a>.
