--- a/index.html
+++ b/index.html
@@ -146,6 +146,27 @@
                     </ul>
                 </nav>
             </header>
+            <h3>News</h3>
+            <blockquote align='left' size>
+            <p class=text>
+                Read the article
+                <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://www.swgo.org/">"Cosmic Radiation: Breakthrough Thanks to Artificial Intelligence"</a>.
+                in the FAU journal, discussing my most recent research published in Physical Review Letters.
+            </p>
+            </blockquote>
+            
+            <blockquote align='left' size>
+            <p class=text>
+                Is machine learning causing a paradigm shift in how we analyze data in physics research? I recently co-authored a
+                <a class='paper_li' target="_blank" rel="noopener noreferrer" href="https://worldscientific.com/worldscibooks/10.1142/12294">textbook</a>
+                that addresses this question and introduces deep learning, the state-of-the-art in machine learning, to physicists. 
+                Feel free to also check out plenty of tutorials
+                (<a target="_blank" rel="noopener noreferrer" href="http://deeplearningphysics.org">deeplearningphysics.org</a>)
+                demonstrating the application of deep learning to physics challenges. All tutorials are powered by
+                <a class='paper_li' target="_blank" rel="noopener noreferrer" href="https://keras.io/"">Keras</a>.
+            </p>
+            </blockquote>
+
             <h3>Focus of my research</h3>
 
             <p class=text>
