--- a/index.html
+++ b/index.html
@@ -78,41 +78,49 @@
 
 
             <h2>Awesome Neural Network Stuff</h2>
+            <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://github.com/DeepLearningForPhysicsResearchBook/deep-learning-physics?tab=readme-ov-file">
+                Explore how to apply neural networks to physics data analyses</a>
+            <span><a target="_blank" rel="noopener noreferrer" href=http://www.deeplearningphysics.org/><img
+                        src="images/dlfpr_tutorials.png" width="40%" alt="" /></a></span>
+            <div style="margin-bottom: 1.5em"></div>
+
             <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://playground.tensorflow.org">Visit a
                 nice neural network playground </a>
-
             <span><a target="_blank" rel="noopener noreferrer" href=https://playground.tensorflow.org><img
-                        src="images/playground_tensorflow.png" width="80%" height="80%" alt="" /></a></span>
+                        src="images/playground_tensorflow.png" width="50%" alt="" /></a></span>
+            <div style="margin-bottom: 1.5em"></div>
 
 
             <a class='a_li' target="_blank" rel="noopener noreferrer"
                 href="https://lrpserver.hhi.fraunhofer.de/handwriting-classification">Understanding neural network
                 reasoning</a>
-
             <span><a target="_blank" rel="noopener noreferrer"
                     href="https://lrpserver.hhi.fraunhofer.de/handwriting-classification"><img src="images/lrp_demo.png"
-                        width="80%" height="80%" alt="" /></a></span>
+                        width="50%" alt="" /></a></span>
+            <div style="margin-bottom: 1.5em"></div>
 
 
             <a class='a_li' target="_blank" rel="noopener noreferrer"
                 href="https://distill.pub/2017/feature-visualization/">Feature Visualization of neural networks</a>
-
             <span><a target="_blank" rel="noopener noreferrer"
                     href="https://distill.pub/2017/feature-visualization/"><img
-                        src="images/distill_feature_visualization.jpg" width="80%" height="80%" alt="" /></a></span>
+                        src="images/distill_feature_visualization.jpg" width="50%" alt="" /></a></span>
+            <div style="margin-bottom: 1.5em"></div>
+
 
             <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://poloclub.github.io/ganlab/">Play
                 with Generative Adversarial Networks in your browser</a>
             <span><a target="_blank" rel="noopener noreferrer" href="https://poloclub.github.io/ganlab/"><img
-                        src="images/ganlab.png" width="80%" height="80%" alt="" /></a></span>
+                        src="images/ganlab.png" width="45%" alt="" /></a></span>
+            <div style="margin-bottom: 1.5em"></div>
+
 
             <a class='a_li' target="_blank" rel="noopener noreferrer" href="http://www.whichfaceisreal.com/">Play "which
                 face is real"</a>
             <p class=text> Try to identify which images are real photographs and which ones were generated using
                 Generative Adversarial Networks.</p>
             <span><a target="_blank" rel="noopener noreferrer" href="http://www.whichfaceisreal.com/"><img
-                        src="images/whichfaceisreal.jpg" width="80%" height="80%" alt="" /></a></span>
-
+                        src="images/whichfaceisreal.jpg" width="50%" alt="" /></a></span>
             <div style="margin-bottom: 0.5em"></div>
 
             <!-- 
@@ -172,22 +180,21 @@
             <h3>Focus of my research</h3>
 
             <p class=text>
-                I am a postdoctoral researcher at the Erlangen Centre for Astroparticle Physics, Germany.
-                My interest is the application of artificial intelligence (AI) to challenges in astroparticle physics.
-                Currently, I am researching pattern recognition techniques, such as convolutional neural networks, graph networks, and transformers, to enhance the observation capacities of multi-messenger observatories.
-                Furthermore, I research unsupervised learning algorithms, which are powerful tools to approximate complex high-dimensional distributions of data present in almost every field of physics.
-                Approximations of these distributions enable exceptional prospects to substantially accelerate time-consuming physics simulations and model complicated backgrounds, facilitating analyses with enhanced precision.
+                I am a postdoctoral researcher at the Erlangen Centre for Astroparticle Physics and apply artificial intelligence (AI) to challenges in astroparticle physics.
+                Currently, I am researching machine learning techniques for object reconstruction to enhance the observation capacities of multi-messenger observatories.
+                Additionally, I explore unsupervised learning approaches that can effectively model complex high-dimensional data distributions.
+                These approximations promise to significantly speed up physics simulations, enable instrument optimizations, and model complicated backgrounds, ultimately enhancing analyses with greater precision.
             </p>
 
              <p class="text">
                 For centuries, astronomers have used telescopes to explore the gigantic universe surrounding us by directly measuring the incoming messenger particles, e.g., visible and infrared light.
                 These measurements become much more complicated at higher energies as the incoming messenger particles induce massive particle cascades when interacting with the atmosphere.
                 The footprints of such cascades can extend over several square kilometers when arriving at the Earth's surface.
-                Therefore, large collaborations of hundreds of scientists, engineers, and technicians are operating gigantic astroparticle physics experiments observing these particle cascades.
-                By exploiting these data the characteristics of the penetrating messenger particles are reconstructed to open a window to the universe at extreme energies and its most radical phenomena.
-            </p>
+                Large collaborations of hundreds of scientists, engineers, and technicians are operating gigantic experiments observing these particle cascades.
+                The window to the universe at extreme energies and its most radical phenomena can be opened by unveiling the secrets of their measured data.
+                </p>
                 <div class="box">
-                    <p>The capabilities and precision of machine learning offer outstanding opportunities to greatly improve the complex and time-consuming reconstruction algorithms to better reveal the fascinating processes in our universe.</p>
+                    <p>The capabilities of machine learning offer outstanding opportunities to better reveal the fascinating processes in our universe.</p>
                 </div>
             <div style="margin-bottom: 0.5em"></div>
 
@@ -197,13 +204,12 @@
 
 
             <h3 align='left' style="margin-bottom: 0.5em">Gamma-ray astronomy</h3>
-            <p class="text">Gamma rays are the highest-energy form of electromagnetic radiation.
-                These rays originate from the universe's most extreme and dynamic events and are invisible to the naked eye.
+            <p class="text">Gamma rays are the highest-energy form of electromagnetic radiation, invisible to the naked eye.
                 They carry detailed information about the universe's most explosive and energetic processes, helping scientists piece together the puzzle of its evolution and composition.
-                The next-generation instruments for astronomic observations of the gamma-ray sky are the
+                The next-generation instruments for observations of the gamma-ray sky are the
                 <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://www.swgo.org/">Southern Wide-field Gamma-Ray Observatory (SWGO)</a>.
                 and the <a class='a_li' target="_blank" rel="noopener noreferrer" href="https://www.cta-observatory.org/">Cherenkov Telescope Array (CTA)</a>.
-                These two complementary observatories will open a new window to the non-thermal universe, revolutionizing our understanding of the gamma-ray sky.
+                These two complementary observatories will provide new insights into the non-thermal universe, revolutionizing our understanding of the gamma-ray sky.
             </p>
             <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/5gRHFQP_SjU?si=G-hKabLvG6XAzXwf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             -->
@@ -211,13 +217,11 @@
 
             <h3 align='left' style="margin-bottom: 0.5em">Why AI?</h3>
             <p class=text>
-                Current state-of-the-art algorithms rely on deep learning, i.e., machine-learning techniques based on deep neural networks, often referred to as building blocks of artificial intelligence (AI).
-                These models are capable of analyzing and recognizing patterns in huge amounts of data with unprecedented precision and efficiency.                <!-- Whether for internet search results, machine translation, image classification, or speech recognition on the smartphone, deep learning is already part of our
+                Current state-of-the-art AI algorithms rely on deep learning, i.e., machine-learning techniques based on deep neural networks.
+                These models are capable of analyzing and recognizing patterns in vast amounts of data with unprecedented precision and efficiency.                <!-- Whether for internet search results, machine translation, image classification, or speech recognition on the smartphone, deep learning is already part of our
                 everyday life.-->
-                The breakthrough of deep learning was around 2012 when the error rates in speech recognition and
-                computer vision were reduced massively. Since then, deep learning has become the leading approach in AI reserach.
-                The capabilities of these algorithms offer exceptional potential for improving techniques currently employed in astroparticle physics.
-            </p>
+                These advancements enable to discover increasingly smaller structures within our measurement data.
+                This complexity requires dedicated developments and research of the methods to ensure their validity, robustness, and precision, with the potential to fundamentally change the way physics data is analyzed.            </p>
             
             <!-- 
             <div style="margin-bottom: 1em"></div>
@@ -242,12 +246,14 @@
             <div style="margin-bottom: 1.5em"></div>
             <h3 align='left' style="margin-bottom: 0.5em">The fascination of astroparticle physics</h3>
             <p class=text>
+                Astroparticle physics combines the research field of astrophysics, which explores the largest scales we can imagine, our cosmos, with particle physics, researching the tiniest particles in our universe.
+                </p>
+            <p class=text>
                 The fascination with astroparticle physics lies in its ability to unveil the universe's most elusive secrets using messenger particles like gamma and cosmic rays.
-                They provide a unique lens through which we can study phenomena that are otherwise inaccessible and investigate fundamental questions in understanding our world.
-            </p>
+                They provide a unique lens through which we can study otherwise inaccessible phenomena and investigate fundamental questions in understanding our world.</p>
             <p class="text">
                 <b><a class='paper_li'>Observing the extreme Universe:</a></b> Gamma rays and cosmic rays reveal the ultimate forces in our cosmos.
-                These messengers allow us to image massive stellar explosions, the violent environments around black holes, and the birth of new stars and aid us in understanding the physical processes happening at these far-off exotic places.
+                These messengers allow us to image massive stellar explosions, the violent environments around black holes, and the birth of new stars and aid us in understanding the physical processes happening at these exotic places.
             </p>
             <p class="text">
                 <b><a class='paper_li'>Cosmic Accelerators and fundamental physics:</a></b> These cosmic phenomena serve as natural particle accelerators, capable of producing particles with energies far beyond human-built particle accelerators such as the LHC at CERN.
@@ -258,12 +264,12 @@
             
             <h2>Excited?  Apply deep learning in astroparticle physics yourself</h3>
             <p class='text'>
-                Explore the potential of deep learning to improve the quality of astroparticle experiments by reconstructing cosmic-ray properties using deep neural networks.
+                Explore the potential of deep learning to improve the sensitivity of astroparticle experiments using deep neural networks.
                 Open the notebooks at google colab to train the networks with GPU support or see the code on <a class='a_li' target="_blank" rel="noopener noreferrer"
                 href="https://github.com/jglombitza/tutorial_nn_airshowers">GitHub</a>.
             </p>
                 <li class='list'>
-                    <p class="text">Utilize fully-connected networks for the reconstruction....    
+                    <p class="text">Utilize fully-connected networks for event reconstruction....    
                         <a target="_blank" rel="noopener noreferrer"
                             href="https://colab.research.google.com/github/jglombitza/tutorial_nn_airshowers/blob/master/fully_connected.ipynb"><img
                             src="https://colab.research.google.com/assets/colab-badge.svg" alt="" />
@@ -271,7 +277,7 @@
                     </p>
                 </li>
                 <li class='list'>
-                    <p class="text">Utilize convolutional networks (advanced) for the reconstruction....   
+                    <p class="text">Utilize convolutional networks for event reconstruction....   
                         <a target="_blank" rel="noopener noreferrer"
                             href="https://colab.research.google.com/github/jglombitza/tutorial_nn_airshowers/blob/master/convolutional.ipynb"><img
                             src="https://colab.research.google.com/assets/colab-badge.svg" alt="" />
@@ -281,7 +287,7 @@
             <div style="margin-bottom: 1.5em"></div>
 
 
-            <h3>More tutorials about deep learning in physics research</h3>
+            <h3>More tutorials, lectures, and material</h3>
                 <p class="text">
                     Find more tutorials on my:
                 </p>
