--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
             <p class=text>
                 Is machine learning causing a paradigm shift in how we analyze data in physics research? I recently co-authored a
                 <a class='paper_li' target="_blank" rel="noopener noreferrer" href="https://worldscientific.com/worldscibooks/10.1142/12294">textbook</a>
-                that addresses this question and introduces deep learning, the state-of-the-art in machine learning, to physicists. 
-                Feel free to also check out plenty of tutorials
-                (<a target="_blank" rel="noopener noreferrer" href="http://deeplearningphysics.org">deeplearningphysics.org</a>)
-                demonstrating the application of deep learning to physics challenges. All tutorials are powered by
+                that addresses this question and state-of-the-art in machine learning to physicists. 
+                Feel free to also check out plenty of
+                <a target="_blank" rel="noopener noreferrer" href="http://deeplearningphysics.org">tutorials</a>
+                demonstrating the application of machine learning to various physics challenges. All tutorials are powered by
                 <a class='paper_li' target="_blank" rel="noopener noreferrer" href="https://keras.io/"">Keras</a>.
             </p>
             </blockquote>
