--- a/index.html
+++ b/index.html
@@ -354,6 +354,12 @@
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
                 href='https://www.dpg-verhandlungen.de/year/2025/conference/goettingen/part/t/session/105/contribution/2'>Physics in the century of big data (invited highlight talk), DPG Spring meeting, Göttingen, Germany</a></li>
             <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://indico.cern.ch/event/1258933/contributions/6495580/'>Finalizing the Design of SWGO, (ICRC'25) Geneva, Switzerland</a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href='https://kipac.stanford.edu/events/shinnaga-untangling-gravity-and-magnetism-can-3d-histories-cloud-cores-reveal-how-stars-gain'>From 100 GeV to PeV: Advancing Wide-Field Gamma-Ray Observations with SWGO, KIPAC Stanford, US</a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
+                href=''>Applications of Deep Learning in Astrophysics, Barcelona, Spain</a></li>
+            <li class='list'><a class='a_li' target="_blank" rel="noopener noreferrer"
                 href='https://events.icecube.wisc.edu/event/243/contributions/10694/'>Deep Learning for astroparticle physics (review), Machine learning workshop, Newark, USA</a></li>
             <div style="margin-bottom: 2.5em"></div>
 
